Bug 1245696: Disable opus/vorbis audio with h264. r=cpeterson a=ritu

YouTube has broken encoding when we enable this codec combination.

--HG--
extra : commitid : EikZcEaReNg
extra : source : 0e8b46ed6c8f52f5b75069df4a536f5fd6e17d99