dom/media/mediasource/MediaSource.cpp
@@ -117,7 +117,7 @@ IsTypeSupported(const nsAString& aType)
         return NS_OK;
       } else if (DecoderTraits::IsWebMTypeAndEnabled(mimeTypeUTF8)) {
         if (!(Preferences::GetBool("media.mediasource.webm.enabled", false) ||
-              (Preferences::GetBool("media.mediasource.webm.audio.enabled", true) &&
+              (Preferences::GetBool("media.mediasource.webm.audio.enabled", false) &&
                DecoderTraits::IsWebMAudioType(mimeTypeUTF8)) ||
               IsWebMForced())) {
           return NS_ERROR_DOM_NOT_SUPPORTED_ERR;
